@@ -2,11 +2,14 @@ package com.robertx22.mine_and_slash.onevent.item;
 
 import com.robertx22.mine_and_slash.database.items.currency.ICurrencyItemEffect;
 import com.robertx22.mine_and_slash.db_lists.registry.SlashRegistry;
+import com.robertx22.mine_and_slash.items.misc.ItemMapBackPortal;
 import com.robertx22.mine_and_slash.saveclasses.Unit;
+import com.robertx22.mine_and_slash.saveclasses.item_classes.MapItemData;
 import com.robertx22.mine_and_slash.uncommon.capability.EntityCap.UnitData;
 import com.robertx22.mine_and_slash.uncommon.datasaving.Load;
 import com.robertx22.mine_and_slash.uncommon.interfaces.data_items.ICommonDataItem;
 import com.robertx22.mine_and_slash.uncommon.localization.Styles;
+import com.robertx22.mine_and_slash.uncommon.localization.Words;
 import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.item.ItemStack;
 import net.minecraft.util.text.StringTextComponent;
@@ -29,50 +32,72 @@ public class OnTooltip {
 
     private static void buildDataTootltip(ItemTooltipEvent event) {
 
-        if (Screen.hasControlDown()) {
-            return;
-        }
+        try {
+            if (Screen.hasControlDown()) {
+                return;
+            }
 
-        if (event.getEntityPlayer() == null || event.getEntityPlayer().world == null || !event
-                .getEntityPlayer().world.isRemote) {
-            return;
-        }
+            if (event.getEntityPlayer() == null || event.getEntityPlayer().world == null || !event
+                    .getEntityPlayer().world.isRemote) {
+                return;
+            }
 
-        ItemStack stack;
+            ItemStack stack;
 
-        stack = event.getItemStack();
+            stack = event.getItemStack();
 
-        if (!stack.hasTag()) {
+            UnitData unitdata = Load.Unit(event.getEntityPlayer());
 
-            return;
-        }
+            if (unitdata == null) {
+                return;
+            }
 
-        UnitData unitdata = Load.Unit(event.getEntityPlayer());
+            Unit unit = unitdata.getUnit();
 
-        if (unitdata == null) {
-            return;
-        }
+            if (unit == null) {
+                return;
+            }
 
-        Unit unit = unitdata.getUnit();
+            if (stack.getItem() instanceof ItemMapBackPortal) {
 
-        if (unit == null) {
-            return;
-        }
-
-        ICommonDataItem data = ICommonDataItem.load(stack);
-
-        if (data != null) {
-            data.BuildTooltip(stack, event, unit, unitdata);
-        } else {
-            if (stack.getItem().getRegistryName() != null) {
-                if (SlashRegistry.CompatibleItems()
-                        .isRegistered(stack.getItem().getRegistryName().toString())) {
-
+                try {
                     event.getToolTip()
-                            .add(new StringTextComponent(Styles.RED + "Compatible Mine and Slash Item"));
+                            .add(Styles.BLUECOMP()
+                                    .appendSibling(Words.CurrentMapInfo.locName())
+                                    .appendText(": "));
 
+                    MapItemData map = Load.playerMapData(event.getEntityPlayer())
+                            .getMap();
+                    map.BuildTooltip(stack, event, unit, unitdata);
+                } catch (Exception e) {
+                    e.printStackTrace();
+                }
+                return;
+
+            }
+
+            if (!stack.hasTag()) {
+
+                return;
+            }
+
+            ICommonDataItem data = ICommonDataItem.load(stack);
+
+            if (data != null) {
+                data.BuildTooltip(stack, event, unit, unitdata);
+            } else {
+                if (stack.getItem().getRegistryName() != null) {
+                    if (SlashRegistry.CompatibleItems()
+                            .isRegistered(stack.getItem().getRegistryName().toString())) {
+
+                        event.getToolTip()
+                                .add(new StringTextComponent(Styles.RED + "Compatible Mine and Slash Item"));
+
+                    }
                 }
             }
+        } catch (Exception e) {
+            e.printStackTrace();
         }
 
     }
